Add order choice section in home component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,33 @@
 
 <hr>
 
+<div class="container text-center">
+  <h3>Choisissez votre commande</h3>
+</div>
+
+<div class="d-md-flex flex-md-equal w-100 my-md-3 justify-content-center">
+  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
+    <div class="my-3">
+      <h2 class="display-4">Sur place</h2>
+      <p class="lead"><mat-icon> restaurant</mat-icon></p>
+    </div>
+    <a class="btn btn-outline-secondary my-5 vertical-align" href="#">
+      Réserver
+    </a>
+  </div>
+  <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
+    <div class="my-3">
+      <h2 class="display-4">En livraison</h2>
+      <p class="lead"><mat-icon>motorcycle</mat-icon></p>
+    </div>
+    <a class="btn btn-outline-secondary my-5" href="#">
+      Commander
+    </a>
+  </div>
+</div>
+
+<hr>
+
 <div class="p-5 mb-4 bg-light rounded-3 container">
   <div class="container py-5">
     <h1 class="display-5 fw-bold">{{ "Home" | translate }}</h1>
