Add tabs for category in menu/card component

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -17,8 +17,12 @@
     <div class="collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
       <ul class="navbar-nav">
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/home">Home</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/about">About</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/menu">Menu</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/deals">Deals</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/approach">Approach</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/join">Join</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/account">Account</a>
       </ul>
       <form class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
