--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
       <h2 class="display-4">Sur place</h2>
       <p class="lead"><mat-icon> restaurant</mat-icon></p>
     </div>
-    <a class="btn btn-outline-secondary my-5 vertical-align" href="#">
+    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/menu">
       Réserver
     </a>
   </div>
@@ -21,7 +21,7 @@
       <h2 class="display-4">En livraison</h2>
       <p class="lead"><mat-icon>motorcycle</mat-icon></p>
     </div>
-    <a class="btn btn-outline-secondary my-5" href="#">
+    <a class="btn btn-outline-secondary my-5" routerLinkActive="active" routerLink="/menu">
       Commander
     </a>
   </div>
@@ -34,7 +34,7 @@
     <div class="my-3">
       <h2 class="display-4">Notre approche</h2>
     </div>
-    <a class="btn btn-outline-secondary my-5 vertical-align" href="#">
+    <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/approach">
       En savoir plus
     </a>
   </div>
