commit pour will

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -23,6 +23,7 @@
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/join">Join</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/account">Account</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/auth/sign-in">Sign In</a>
       </ul>
       <form class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
