--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,3 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
 // Plus imports for other components in your app.
 
@@ -53,3 +51,33 @@ body {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+@import 'themes';
+
+@import '~@nebular/theme/styles/globals';
+
+@import '~@nebular/auth/styles/globals';
+
+@include nb-install() {
+  @include nb-theme-global();
+  @include nb-auth-global();
+};
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// CSS Reset, comment out if not required or using a different module
+//@import '~minireset.css/minireset';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+
+@import "~igniteui-angular/lib/core/styles/themes/index";
+// Uncomment the following lines if you want to add a custom palette:
+// $primary: #731963 !default;
+// $secondary: #ce5712 !default;
+// $app-palette: igx-palette($primary, $secondary);
+
+/* autoprefixer grid: on */
+
+@include igx-core();
+@include igx-typography($font-family: $material-typeface, $type-scale: $material-type-scale);
+@include igx-theme($default-palette);
