--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,8 +1,57 @@
 <div class="p-5 mb-4 bg-light rounded-3 container">
-  <div class="container py-5">
-    <h1 class="display-5 fw-bold">{{ "Contact" | translate }}</h1>
-    <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous
-      versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-    <button class="btn btn-primary btn-lg" type="button">Example button</button>
+  <div class="container py-5 text-center">
+    <h1 class="display-5 fw-bold">{{ "contact.contact-us" | translate }}</h1>
+    <hr>
+    <p class="fs-4">{{ "contact.contact-us-text" | translate }}</p>
+  </div>
+
+  <div class="container py-5 col-md-8">
+    <div class="input-group mb-3">
+      <span class="input-group-text">
+        <mat-icon>person</mat-icon>
+      </span>
+      <input type="text" class="form-control" placeholder="Prénom" aria-label="firstName"
+             aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-5">
+      <span class="input-group-text"></span>
+      <input type="text" class="form-control" placeholder="Nom" aria-label="lastName"
+             aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-5">
+      <span class="input-group-text">
+        <mat-icon>email</mat-icon>
+      </span>
+      <input type="text" class="form-control" placeholder="Email" aria-label="email"
+             aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text"></span>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Votre message"></textarea>
+    </div>
+
+    <div class="py-3 input-group">
+      <form #form="ngForm" class="mx-auto">
+        <div class="row mt-3">
+          <div class="col-sm-12 mb-3">
+            <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required
+                        [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)">
+            </re-captcha>
+            <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
+              <div *ngIf="recaptcha.errors?.['required']">{{ "recaptcha.errors" | translate }}</div>
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-sm-12 mt-3">
+            <button type="button" class="btn btn-outline-dark" (click)="send(form)">Envoyer</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
+
+
+
+
