--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,7 +10,9 @@
   <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
     <div class="my-3">
       <h2 class="display-4">Sur place</h2>
-      <p class="lead"><mat-icon> restaurant</mat-icon></p>
+      <p class="lead">
+        <mat-icon> restaurant</mat-icon>
+      </p>
     </div>
     <a class="btn btn-outline-secondary my-5 vertical-align" routerLinkActive="active" routerLink="/menu">
       Réserver
@@ -19,7 +21,9 @@
   <div class="bg-light mx-3 pt-3 px-3 pb-5 pt-md-5 px-md-5 text-center overflow-hidden col-5">
     <div class="my-3">
       <h2 class="display-4">En livraison</h2>
-      <p class="lead"><mat-icon>motorcycle</mat-icon></p>
+      <p class="lead">
+        <mat-icon>motorcycle</mat-icon>
+      </p>
     </div>
     <a class="btn btn-outline-secondary my-5" routerLinkActive="active" routerLink="/menu">
       Commander
@@ -50,4 +54,3 @@
     <button class="btn btn-primary btn-lg" type="button">Example button</button>
   </div>
 </div>
-
