--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,19 +1,15 @@
 <nb-layout>
     <nb-layout-column>
-        <div class="row">
-            <div class="col-md-12">
-                <nb-card>
-                    <nb-card-body>
-                        <div class=" col-xl-4 col-lg-6 col-md-8 col-sm-12">
-                            <h2 class="title">404 Page Not Found</h2>
-                            <small class="sub-title">The page you were looking for doesn't exist</small>
-                            <button nbButton fullWidth (click)="goHome()" type="button" class="home-button">
-                                Take me home
-                            </button>
-                        </div>
-                    </nb-card-body>
-                </nb-card>
-            </div>
-        </div>
+        <nb-card >
+            <nb-card-body class="d-flex justify-content-center">
+                <div class=" col-xl-4 col-lg-6 col-md-8 col-sm-12">
+                    <h2 class="title">{{'404Notfound.title' | translate}}</h2>
+                    <small class="sub-title">{{'404Notfound.message' | translate}}</small>
+                    <button nbButton fullWidth (click)="goHome()" type="button" class="home-button">
+                    {{'button.home' | translate}}
+                    </button>
+                </div>
+            </nb-card-body>
+        </nb-card>
     </nb-layout-column>
 </nb-layout>
