--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,57 +1,55 @@
-<div class="p-5 mb-4 bg-light rounded-3 container">
-  <div class="container py-5 text-center">
-    <h1 class="display-5 fw-bold">{{ "contact.contact-us" | translate }}</h1>
-    <hr>
-    <p class="fs-4">{{ "contact.contact-us-text" | translate }}</p>
-  </div>
+<nb-layout>
 
-  <div class="container py-5 col-md-8">
-    <div class="input-group mb-3">
-      <span class="input-group-text">
-        <mat-icon>person</mat-icon>
-      </span>
-      <input type="text" class="form-control" placeholder="Prénom" aria-label="firstName"
-             aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-5">
-      <span class="input-group-text"></span>
-      <input type="text" class="form-control" placeholder="Nom" aria-label="lastName"
-             aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-5">
-      <span class="input-group-text">
-        <mat-icon>email</mat-icon>
-      </span>
-      <input type="text" class="form-control" placeholder="Email" aria-label="email"
-             aria-describedby="basic-addon1">
-    </div>
-    <div class="input-group mb-3">
-      <span class="input-group-text"></span>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Votre message"></textarea>
-    </div>
+  <nb-alert outline="success" role="alert" *ngIf="!invalidForm"></nb-alert>
+  <nb-alert outline="warning" role="alert" *ngIf="invalidForm"></nb-alert>
+  <nb-alert outline="danger" role="alert" *ngIf="!invalidForm"></nb-alert>
 
-    <div class="py-3 input-group">
-      <form #form="ngForm" class="mx-auto">
-        <div class="row mt-3">
-          <div class="col-sm-12 mb-3">
-            <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required
-                        [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)">
-            </re-captcha>
-            <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
-              <div *ngIf="recaptcha.errors?.['required']">{{ "recaptcha.errors" | translate }}</div>
-            </div>
+  <nb-layout-column>
+    <div class="p-5 mb-4 bg-light rounded-3 container">
+      <div class="container py-5 text-center">
+        <h1 class="display-5 fw-bold">{{ "contact.contact-us" | translate }}</h1>
+        <hr>
+        <p class="fs-4">{{ "contact.contact-us-text" | translate }}</p>
+      </div>
+
+      <form [formGroup]="contactForm" (ngSubmit)="submitForm()">
+        <div class="container py-5 col-md-8">
+          <div class="input-group mb-3">
+            <input type="text" nbInput fullWidth status="basic" id="firstName" class="form-control" formControlName="firstName" placeholder="Prénom" required>
           </div>
-        </div>
-        <div class="row text-center">
-          <div class="col-sm-12 mt-3">
-            <button type="button" class="btn btn-outline-dark" (click)="send(form)">Envoyer</button>
+          <div class="input-group mb-5">
+            <input type="text" nbInput fullWidth status="basic" id="lastName" class="form-control" formControlName="lastName" placeholder="Nom" required>
+          </div>
+          <div class="input-group mb-5">
+            <input type="email" nbInput fullWidth status="basic" id="email" class="form-control" formControlName="email" placeholder="Email" required>
+          </div>
+          <div class="input-group mb-3">
+            <textarea nbInput fullWidth id="message" class="form-control" formControlName="message" rows="3" placeholder="Votre message" required></textarea>
+          </div>
+
+          <div class="py-3 input-group">
+            <form #form="ngForm" class="mx-auto">
+              <div class="row mt-3">
+                <div class="col-sm-12 mb-3">
+                  <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required
+                              [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)">
+                  </re-captcha>
+                  <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
+                    <div *ngIf="recaptcha.errors?.['required']">{{ "recaptcha.errors" | translate }}</div>
+                  </div>
+                </div>
+              </div>
+              <div class="row text-center">
+                <div class="col-sm-12 mt-3">
+                  <button type="button" class="btn btn-outline-dark" (click)="send(form)">Envoyer</button>
+<!--                  <button nbButton type="submit" class="btn btn-secondary">Envoyer</button>-->
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </form>
     </div>
-  </div>
-</div>
-
-
-
+  </nb-layout-column>
+</nb-layout>
 
