--- a/src/app/pages/Shared/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/Shared/components/shopping-cart/shopping-cart.component.html
@@ -1,23 +1,15 @@
 
-<nb-layout>
-
-
-
-  <nb-layout-column>
   <ng-template #content let-modal>
-
-
-
-
-
     <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Votre panier</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
-    <nb-alert outline="success" role="alert" *ngIf="emptyCart"></nb-alert>
-    <!--      <nb-alert outline="warning" role="alert" *ngIf="invalidForm"></nb-alert>-->
-    <!--      <nb-alert outline="danger" role="alert" *ngIf="!invalidForm"></nb-alert>-->
+
+<!--    <nb-alert outline="success" role="alert"></nb-alert>-->
+<!--    <nb-alert outline="warning" role="alert"></nb-alert>-->
+<!--    <nb-alert outline="danger" role="alert"></nb-alert>-->
+
     <!-- TODO: Ajouter le calcul des prix et ne remonter qu'un seul exemplaire d'item avec un compteur -->
     <form>
       <div class="mb-3">
@@ -32,7 +24,11 @@
           </thead>
           <tbody>
           <tr *ngFor="let item of shoppingCart">
-            <td></td>
+            <td>
+              <button (click)="removeItem(item)" mat-raised-button color="primary">
+                <mat-icon>remove_shopping_cart</mat-icon>
+              </button>
+            </td>
             <td>{{item.libelle}}</td>
             <td></td>
             <td>{{item.price}}</td>
@@ -52,13 +48,10 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="modal.close(cleanCart())">Vider le panier</button>
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Payer</button>
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Valider</button>
   </div>
 </ng-template>
 
 <button class="float" (click)="open(content)">
   <mat-icon>shopping_cart</mat-icon>
 </button>
-  </nb-layout-column>
-</nb-layout>
-
