--- a/src/app/templates/layout/layout.component.html
+++ b/src/app/templates/layout/layout.component.html
@@ -2,7 +2,11 @@
   <app-header></app-header>
 
   <main class="flex-shrink-0">
-    <router-outlet></router-outlet>
+    <nb-layout>
+      <nb-layout-column>
+        <router-outlet></router-outlet>
+      </nb-layout-column>
+    </nb-layout>
   </main>
 
   <footer class="mt-auto">
